// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`application generator should set up project correctly for cypress 1`] = `
"import nx from '@nx/eslint-plugin';

export default [
  ...nx.configs['flat/base'],
  ...nx.configs['flat/typescript'],
  ...nx.configs['flat/javascript'],
  {
    ignores: [
      '**/dist',
      '**/out-tsc',
      '**/vite.config.*.timestamp*',
      '**/vitest.config.*.timestamp*',
    ],
  },
  {
    files: ['**/*.ts', '**/*.tsx', '**/*.js', '**/*.jsx', '**/*.vue'],
    rules: {
      '@nx/enforce-module-boundaries': [
        'error',
        {
          enforceBuildableLibDependency: true,
          allow: ['^.*/eslint(\\\\.base)?\\\\.config\\\\.[cm]?[jt]s$'],
          depConstraints: [
            {
              sourceTag: '*',
              onlyDependOnLibsWithTags: ['*'],
            },
          ],
        },
      ],
    },
  },
  {
    files: [
      '**/*.ts',
      '**/*.tsx',
      '**/*.cts',
      '**/*.mts',
      '**/*.js',
      '**/*.jsx',
      '**/*.cjs',
      '**/*.mjs',
    ],
    // Override or add rules here
    rules: {},
  },
];
"
`;

exports[`application generator should set up project correctly for cypress 2`] = `null`;

exports[`application generator should set up project correctly for cypress 3`] = `
"import vue from 'eslint-plugin-vue';
import baseConfig from '../eslint.config.mjs';

export default [
  ...baseConfig,
  ...vue.configs['flat/recommended'],
  {
    files: ['**/*.vue'],
    languageOptions: {
      parserOptions: {
        parser: await import('@typescript-eslint/parser'),
      },
    },
  },
  {
    files: ['**/*.ts', '**/*.tsx', '**/*.js', '**/*.jsx', '**/*.vue'],
    rules: {
      'vue/multi-word-component-names': 'off',
    },
  },
];
"
`;

exports[`application generator should set up project correctly for cypress 4`] = `
"import { describe, it, expect } from 'vitest';
import { mount } from '@vue/test-utils';
import App from './App.vue';

describe('App', () => {
  it('renders properly', async () => {
    const wrapper = mount(App, {});
    expect(wrapper.text()).toContain('Welcome test 👋');
  });
});
"
`;

exports[`application generator should set up project correctly for cypress 5`] = `
"const { nxE2EPreset } = require('@nx/cypress/plugins/cypress-preset');
const { defineConfig } = require('cypress');
module.exports = defineConfig({
  e2e: {
    ...nxE2EPreset(__filename, {
      cypressDir: 'src',
      bundler: 'vite',
      webServerCommands: {
        default: 'npx nx run test:dev',
        production: 'npx nx run test:preview',
      },
      ciWebServerCommand: 'npx nx run test:preview',
      ciBaseUrl: 'http://localhost:4300',
    }),
    baseUrl: 'http://localhost:4200',
  },
});
"
`;

exports[`application generator should set up project correctly for rsbuild 1`] = `
"/// <reference types='vitest' />
import { defineConfig } from 'vite';
import vue from '@vitejs/plugin-vue';
import { nxViteTsPaths } from '@nx/vite/plugins/nx-tsconfig-paths.plugin';
import { nxCopyAssetsPlugin } from '@nx/vite/plugins/nx-copy-assets.plugin';

export default defineConfig(() => ({
  root: import.meta.dirname,
  cacheDir: '../node_modules/.vite/test',
  plugins: [vue(), nxViteTsPaths(), nxCopyAssetsPlugin(['*.md'])],
  // Uncomment this if you are using workers.
  // worker: {
  //   plugins: () => [ nxViteTsPaths() ],
  // },
  test: {
    name: 'test',
    watch: false,
    globals: true,
    environment: 'jsdom',
    include: ['{src,tests}/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
    reporters: ['default'],
    coverage: {
      reportsDirectory: '../coverage/test',
      provider: 'v8' as const,
    },
  },
}));
"
`;

exports[`application generator should set up project correctly for rsbuild 3`] = `
[
  ".gitignore",
  ".oxfmtrc.json",
  ".prettierrc",
  ".vscode/extensions.json",
  "eslint.config.mjs",
  "nx.json",
  "package.json",
  "test-e2e/eslint.config.mjs",
  "test-e2e/playwright.config.mts",
  "test-e2e/project.json",
  "test-e2e/src/example.spec.ts",
  "test-e2e/tsconfig.json",
  "test/eslint.config.mjs",
  "test/index.html",
  "test/project.json",
  "test/rsbuild.config.ts",
  "test/src/app/App.spec.ts",
  "test/src/app/App.vue",
  "test/src/app/NxWelcome.vue",
  "test/src/main.ts",
  "test/src/styles.css",
  "test/src/vue-shims.d.ts",
  "test/tsconfig.app.json",
  "test/tsconfig.json",
  "test/tsconfig.spec.json",
  "test/vitest.config.mts",
  "tsconfig.base.json",
  "vitest.config.ts",
]
`;

exports[`application generator should set up project correctly with given options 1`] = `
"import nx from '@nx/eslint-plugin';

export default [
  ...nx.configs['flat/base'],
  ...nx.configs['flat/typescript'],
  ...nx.configs['flat/javascript'],
  {
    ignores: [
      '**/dist',
      '**/out-tsc',
      '**/vite.config.*.timestamp*',
      '**/vitest.config.*.timestamp*',
    ],
  },
  {
    files: ['**/*.ts', '**/*.tsx', '**/*.js', '**/*.jsx', '**/*.vue'],
    rules: {
      '@nx/enforce-module-boundaries': [
        'error',
        {
          enforceBuildableLibDependency: true,
          allow: ['^.*/eslint(\\\\.base)?\\\\.config\\\\.[cm]?[jt]s$'],
          depConstraints: [
            {
              sourceTag: '*',
              onlyDependOnLibsWithTags: ['*'],
            },
          ],
        },
      ],
    },
  },
  {
    files: [
      '**/*.ts',
      '**/*.tsx',
      '**/*.cts',
      '**/*.mts',
      '**/*.js',
      '**/*.jsx',
      '**/*.cjs',
      '**/*.mjs',
    ],
    // Override or add rules here
    rules: {},
  },
];
"
`;

exports[`application generator should set up project correctly with given options 2`] = `null`;

exports[`application generator should set up project correctly with given options 3`] = `
"import vue from 'eslint-plugin-vue';
import baseConfig from '../eslint.config.mjs';

export default [
  ...baseConfig,
  ...vue.configs['flat/recommended'],
  {
    files: ['**/*.vue'],
    languageOptions: {
      parserOptions: {
        parser: await import('@typescript-eslint/parser'),
      },
    },
  },
  {
    files: ['**/*.ts', '**/*.tsx', '**/*.js', '**/*.jsx', '**/*.vue'],
    rules: {
      'vue/multi-word-component-names': 'off',
    },
  },
];
"
`;

exports[`application generator should set up project correctly with given options 4`] = `
"import { describe, it, expect } from 'vitest';
import { mount } from '@vue/test-utils';
import App from './App.vue';

describe('App', () => {
  it('renders properly', async () => {
    const wrapper = mount(App, {});
    expect(wrapper.text()).toContain('Welcome test 👋');
  });
});
"
`;

exports[`application generator should set up project correctly with given options 5`] = `
"import { defineConfig, devices } from '@playwright/test';
import { nxE2EPreset } from '@nx/playwright/preset';
import { workspaceRoot } from '@nx/devkit';

// For CI, you may want to set BASE_URL to the deployed application.
const baseURL = process.env['BASE_URL'] || 'http://localhost:4300';

/**
 * Read environment variables from file.
 * https://github.com/motdotla/dotenv
 */
// import 'dotenv/config';

/**
 * See https://playwright.dev/docs/test-configuration.
 *
 * Generated as a .mts file so Node forces ESM regardless of workspace
 * \`type\`. Playwright routes \`.mts\` through its ESM loader (dynamic import,
 * bypassing the pirates CJS-compile path), and Nx's native TS strip loads
 * \`.mts\` directly. Playwright's configLoader auto-discovers
 * \`playwright.config.mts\` via its extension list
 * (.ts/.js/.mts/.mjs/.cts/.cjs).
 */
export default defineConfig({
  ...nxE2EPreset(import.meta.dirname, { testDir: './src' }),
  /* Shared settings for all the projects below. See https://playwright.dev/docs/api/class-testoptions. */
  use: {
    baseURL,
    /* Collect trace when retrying the failed test. See https://playwright.dev/docs/trace-viewer */
    trace: 'on-first-retry',
  },
  /* Run your local dev server before starting the tests */
  webServer: {
    command: 'npx nx run test:preview',
    url: 'http://localhost:4300',
    reuseExistingServer: true,
    cwd: workspaceRoot,
  },
  projects: [
    {
      name: 'chromium',
      use: { ...devices['Desktop Chrome'] },
    },

    {
      name: 'firefox',
      use: { ...devices['Desktop Firefox'] },
    },

    {
      name: 'webkit',
      use: { ...devices['Desktop Safari'] },
    },

    // Uncomment for mobile browsers support
    /* {
      name: 'Mobile Chrome',
      use: { ...devices['Pixel 5'] },
    },
    {
      name: 'Mobile Safari',
      use: { ...devices['iPhone 12'] },
    }, */

    // Uncomment for branded browsers
    /* {
      name: 'Microsoft Edge',
      use: { ...devices['Desktop Edge'], channel: 'msedge' },
    },
    {
      name: 'Google Chrome',
      use: { ...devices['Desktop Chrome'], channel: 'chrome' },
    } */
  ],
});
"
`;

exports[`application generator should set up project correctly with given options 6`] = `
[
  ".gitignore",
  ".oxfmtrc.json",
  ".prettierrc",
  ".vscode/extensions.json",
  "eslint.config.mjs",
  "nx.json",
  "package.json",
  "test-e2e/eslint.config.mjs",
  "test-e2e/playwright.config.mts",
  "test-e2e/project.json",
  "test-e2e/src/example.spec.ts",
  "test-e2e/tsconfig.json",
  "test/eslint.config.mjs",
  "test/index.html",
  "test/project.json",
  "test/src/app/App.spec.ts",
  "test/src/app/App.vue",
  "test/src/app/NxWelcome.vue",
  "test/src/main.ts",
  "test/src/styles.css",
  "test/src/vue-shims.d.ts",
  "test/tsconfig.app.json",
  "test/tsconfig.json",
  "test/tsconfig.spec.json",
  "test/vite.config.mts",
  "tsconfig.base.json",
  "vitest.config.ts",
]
`;
